# macfanctl

./: CMakeLists.txt  README.MD
example/: config
include/: smc.h
include/macfanctl/: macfanctl.h  point_curve.h
include/macfanctl/smc/: smc.h  smc_types.h
src/: config.c  config.h  curve_point.c  curve_point.h  globals.c  globals.h  interpolate.c  interpolate.h  main.c  signal.h  signals.h
src/impl/macos/: macos_signal.c
src/impl/macos/log/: macos_log.c
src/impl/win32/: win32_signal.c
src/libmacfanctl/: macfanctl.c  point_curve.c
src/libmacfanctl/impl/macos/: macos_smc.c
src/log/: log.h
